--- a/index.html
+++ b/index.html
@@ -325,10 +325,10 @@
   <nav class="navbar">
     <div class="navbar-container">
       <div class="navbar-logo">
-        <a href="#home">VoidedMC Hosting</a>
+        <a href="home">VoidedMC Hosting</a>
       </div>
       <div class="navbar-links" id="nav-links">
-        <a href="#home">Home</a>
+        <a href="home">Home</a>
         <a href="#about">About Us</a>
         <a href="https://adminconsole.voidedmc.net">Login</a>
       </div>
