--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
         <h1>VoidedMC Hosting</h1>
         <h2>100% Free Hosting.</h2>
         <p>We're not lying... Boot your FREE Minecraft server in a matter of minutes using our powerful infrastructure—no catch, no credit card.</p>
-        <a href="plans" class="cta-button">Get Started Now</a>
+        <a href="plans.html" class="cta-button">Get Started Now</a>
       </div>
       <div class="header-right">
         <div class="feature-card">
