--- a/index.html
+++ b/index.html
@@ -340,10 +340,15 @@
 
   <!-- Hero Section -->
   <header id="home">
-    <video autoplay muted loop playsinline class="background-video">
-      <source src="MCShaders.mp4" type="video/mp4">
-      Your browser does not support the video tag.
-    </video>
+  <video autoplay muted loop playsinline class="background-video">
+    <source src="MCShaders.mp4" type="video/mp4">
+    Your browser does not support the video tag.
+  </video>
+  <div class="header-overlay"></div> <!-- Dark overlay added here -->
+  <div class="header-flex-container">
+    <!-- existing content -->
+  </div>
+</header>
     <div class="header-flex-container">
       <div class="header-left">
         <h1>VoidedMC Hosting</h1>
