--- a/index.html
+++ b/index.html
@@ -39,7 +39,6 @@
       visibility: hidden;
     }
 
-    /* Navbar */
     .navbar {
       position: fixed;
       top: 0;
@@ -112,6 +111,7 @@
 
     header {
       position: relative;
+      background: url('https://i.redd.it/4ec77oea73c41.gif') center/cover no-repeat fixed;
       height: 100vh;
       display: flex;
       align-items: center;
@@ -119,17 +119,14 @@
       padding: 2rem;
       color: #fff;
       margin-top: 60px;
-      overflow: hidden;
     }
 
-    .background-video {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100vw;
-      height: 100vh;
-      object-fit: cover;
-      z-index: -1;
+    header::before {
+      content: "";
+      position: absolute;
+      inset: 0;
+      background: rgba(0, 0, 0, 0.2); /* Lightened overlay */
+      z-index: 0;
     }
 
     .header-flex-container {
@@ -323,7 +320,7 @@
 </head>
 <body>
 
-  <!-- Navbar -->
+  <!-- ✅ Modern Navbar -->
   <nav class="navbar">
     <div class="navbar-container">
       <div class="navbar-logo">
@@ -338,17 +335,11 @@
     </div>
   </nav>
 
+  <!-- ✅ Scroll target for Home -->
+  <div id="home"></div>
+
   <!-- Hero Section -->
-  <header id="home">
-  <video autoplay muted loop playsinline class="background-video">
-    <source src="MCShaders.mp4" type="video/mp4">
-    Your browser does not support the video tag.
-  </video>
-  <div class="header-overlay"></div> <!-- Dark overlay added here -->
-  <div class="header-flex-container">
-    <!-- existing content -->
-  </div>
-</header>
+  <header>
     <div class="header-flex-container">
       <div class="header-left">
         <h1>VoidedMC Hosting</h1>
@@ -391,17 +382,17 @@
     <div class="about-section">
       <div class="feature-icon">🎯</div>
       <h3>Our Mission</h3>
-      <p>At VoidedMC Hosting, our mission is to make high-performance Minecraft server hosting accessible to everyone—without cost or compromise. We believe in empowering creators, gamers, and communities with the tools they need to thrive.</p>
+      <p>At VoidedMC Hosting, our mission is to make high-performance Minecraft server hosting accessible to everyone—without cost or compromise.</p>
     </div>
     <div class="about-section">
       <div class="feature-icon">🧑‍💻</div>
       <h3>Meet The Owner</h3>
-      <p>VoidedMC Hosting was founded by a passionate gamer and developer who saw a gap in the market for truly free hosting. Backed by technical experience and community-first values, our founder ensures users get the best possible experience.</p>
+      <p>VoidedMC Hosting was founded by a passionate gamer and developer who saw a gap in the market for truly free hosting.</p>
     </div>
     <div class="about-section">
       <div class="feature-icon">⚙️</div>
       <h3>Our Hardware</h3>
-      <p>We run on enterprise-grade AMD EPYC CPUs, NVMe SSDs, and redundant networking to ensure blazing-fast performance and uptime. Our infrastructure is built for scale, speed, and reliability—so your server is always ready to play.</p>
+      <p>We run on enterprise-grade AMD EPYC CPUs, NVMe SSDs, and redundant networking to ensure blazing-fast performance and uptime.</p>
     </div>
   </section>
 
@@ -410,7 +401,7 @@
     &copy; 2025 VoidedMC. All rights reserved.
   </footer>
 
-  <!-- Scroll Animation Script -->
+  <!-- Scripts -->
   <script>
     const observer = new IntersectionObserver((entries) => {
       entries.forEach(entry => {
@@ -433,5 +424,34 @@
     });
   </script>
 
+  <!-- Scroll to #home on page load -->
+  <script>
+    window.addEventListener('DOMContentLoaded', () => {
+      const homeSection = document.getElementById('home');
+      if (homeSection) {
+        homeSection.scrollIntoView({ behavior: 'smooth' });
+      }
+    });
+  </script>
+
+  <!-- Smooth scroll with offset -->
+  <script>
+    document.querySelectorAll('a[href^="#"]').forEach(anchor => {
+      anchor.addEventListener('click', function(e) {
+        const targetId = this.getAttribute('href').substring(1);
+        const target = document.getElementById(targetId);
+        if (target) {
+          e.preventDefault();
+          const offset = 80;
+          const elementPosition = target.getBoundingClientRect().top + window.scrollY;
+          const offsetPosition = elementPosition - offset;
+          window.scrollTo({
+            top: offsetPosition,
+            behavior: 'smooth'
+          });
+        }
+      });
+    });
+  </script>
 </body>
 </html>
