--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 
     header {
       position: relative;
-      background: url('https://i.redd.it/4ec77oea73c41.gif') center/cover no-repeat fixed;
+      background: src="MCShaders.mp4" type="video/mp4";
       height: 100vh;
       display: flex;
       align-items: center;
