--- a/index.html
+++ b/index.html
@@ -111,7 +111,6 @@
 
     header {
       position: relative;
-      background: src="MCShaders.mp4" type="video/mp4";
       height: 100vh;
       display: flex;
       align-items: center;
@@ -119,14 +118,26 @@
       padding: 2rem;
       color: #fff;
       margin-top: 60px;
+      overflow: hidden;
     }
 
     header::before {
       content: "";
       position: absolute;
       inset: 0;
-      background: rgba(0, 0, 0, 0.2); /* Lightened overlay */
+      background: rgba(0, 0, 0, 0.4); /* Lightened overlay */
       z-index: 0;
+    }
+
+    header video {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      z-index: -1;
     }
 
     .header-flex-container {
@@ -340,6 +351,9 @@
 
   <!-- Hero Section -->
   <header>
+    <video autoplay loop muted>
+      <source src="MCShaders.mp4" type="video/mp4" />
+    </video>
     <div class="header-flex-container">
       <div class="header-left">
         <h1>VoidedMC Hosting</h1>
@@ -424,34 +438,5 @@
     });
   </script>
 
-  <!-- Scroll to #home on page load -->
-  <script>
-    window.addEventListener('DOMContentLoaded', () => {
-      const homeSection = document.getElementById('home');
-      if (homeSection) {
-        homeSection.scrollIntoView({ behavior: 'smooth' });
-      }
-    });
-  </script>
-
-  <!-- Smooth scroll with offset -->
-  <script>
-    document.querySelectorAll('a[href^="#"]').forEach(anchor => {
-      anchor.addEventListener('click', function(e) {
-        const targetId = this.getAttribute('href').substring(1);
-        const target = document.getElementById(targetId);
-        if (target) {
-          e.preventDefault();
-          const offset = 80;
-          const elementPosition = target.getBoundingClientRect().top + window.scrollY;
-          const offsetPosition = elementPosition - offset;
-          window.scrollTo({
-            top: offsetPosition,
-            behavior: 'smooth'
-          });
-        }
-      });
-    });
-  </script>
 </body>
 </html>
