--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
       content: "";
       position: absolute;
       inset: 0;
-      background: rgba(0, 0, 0, 0); /* Lightened overlay */
+      background: transparent; /* Remove the dark overlay */
       z-index: 0;
     }
 
