--- a/plans.html
+++ b/plans.html
@@ -133,7 +133,7 @@
           <li>10 GB SSD</li>
           <li>Basic Support</li>
         </ul>
-        <button class="select-button">Get Started</button>
+         <a href="https://adminconsole.voidedmc.net/auth/register"><button class="select-button">Get Started</button></a>
       </div>
 
       <div class="plan">
