--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
       <div class="header-left">
         <h1>VoidedMC Hosting</h1>
         <h2>100% Free Hosting.</h2>
-        <p>We're not lying... Boot your FREE Minecraft server in a matter of minutes using our powerful infrastructure—no catch, no credit card.</p>
+        <p>We're not lying... Boot your FREE Minecraft server in a matter of minutes! No catch, no credit card.</p>
         <a href="plans.html" class="cta-button">Get Started Now</a>
       </div>
       <div class="header-right">
