--- a/index.html
+++ b/index.html
@@ -408,32 +408,7 @@
       <h3>Our Hardware</h3>
       <p>We believe in being as open and honest as possible. Unlike many hosting providers, we want you to know exactly what powers our services.
 Yes, we know — the free tier specifications are nothing to write home about. But they’re perfect for running lots of lightweight Minecraft servers. Our paid tier, on the other hand, is backed by much more powerful hardware for better performance and reliability.
-Here’s a full breakdown of our infrastructure. 
-
-Free Tier Specifications
-Hosted on Dell PowerEdge R720 Servers
-
-CPU
-
-Model: Dual Intel Xeon E5-2690
-
-Total Cores/Threads: 16 Cores / 32 Threads (8C/16T per CPU)
-
-Base Clock: 2.9 GHz
-
-Turbo Boost: Up to 3.8 GHz
-
-Memory
-
-Total RAM: 196 GB DDR3 ECC Registered
-
-RAM Speed: 2300 MHz
-
-Storage
-
-Type: SSDs in RAID 5 configuration
-
-Performance: Balanced for reliability and read/write efficiency</p>
+Here’s a full breakdown of our infrastructure. </p>
     </div>
   </section>
 
