--- a/index.html
+++ b/index.html
@@ -406,9 +406,13 @@
     <div class="about-section">
       <div class="feature-icon">⚙️</div>
       <h3>Our Hardware</h3>
-      <p>We believe in being as open and honest as possible. Unlike many hosting providers, we want you to know exactly what powers our services.
-Yes, we know — the free tier specifications are nothing to write home about. But they’re perfect for running lots of lightweight Minecraft servers. Our paid tier, on the other hand, is backed by much more powerful hardware for better performance and reliability.
-Here’s a full breakdown of our infrastructure. </p>
+      <p>We believe in being as open and honest as possible. 
+
+Unlike many hosting providers, we want you to know exactly what powers our services. Yes, we know — the free tier specifications are nothing to write home about. But they’re perfect for running lots of lightweight Minecraft servers. Our paid tier, on the other hand, is backed by much more powerful hardware for better performance and reliability. 
+
+Here’s a full breakdown of our infrastructure.
+
+ </p>
     </div>
   </section>
 
