--- a/index.html
+++ b/index.html
@@ -406,13 +406,19 @@
     <div class="about-section">
       <div class="feature-icon">⚙️</div>
       <h3>Our Hardware</h3>
-      <p>We believe in being as open and honest as possible. 
+      <p>We believe in being as open and honest as possible.</p>
 
-Unlike many hosting providers, we want you to know exactly what powers our services. Yes, we know — the free tier specifications are nothing to write home about. But they’re perfect for running lots of lightweight Minecraft servers. Our paid tier, on the other hand, is backed by much more powerful hardware for better performance and reliability. 
+<p>Unlike many hosting providers, we want you to know exactly what powers our services.</p>
 
-Here’s a full breakdown of our infrastructure.
+<p>
+  Yes, we know — the free tier specifications are nothing to write home about. But they’re perfect for running lots of lightweight Minecraft servers.
+</p>
 
- </p>
+<p>
+  Our <strong>paid tier</strong>, on the other hand, is backed by much more powerful hardware, offering significantly better performance and reliability.
+</p>
+
+<p>Here’s a full breakdown of our infrastructure:</p>
     </div>
   </section>
 
