--- a/index.html
+++ b/index.html
@@ -406,20 +406,58 @@
     <div class="about-section">
       <div class="feature-icon">⚙️</div>
       <h3>Our Hardware</h3>
-      <p>We believe in being as open and honest as possible.</p>
+      <p>
+  We believe in being as open and honest as possible.<br><br>
 
-<p>Unlike many hosting providers, we want you to know exactly what powers our services.</p>
+  Unlike many hosting providers, we want you to know exactly what powers our services.<br><br>
 
-<p>
-  Yes, we know — the free tier specifications are nothing to write home about. But they’re perfect for running lots of lightweight Minecraft servers.
+  Yes, we know — the free tier specifications are nothing to write home about. But they’re perfect for running lots of lightweight Minecraft servers.<br><br>
+
+  Our <strong>paid tier</strong>, on the other hand, is backed by much more powerful hardware, offering significantly better performance and reliability.<br><br>
+
+  Here’s a full breakdown of our infrastructure:
 </p>
 
-<p>
-  Our <strong>paid tier</strong>, on the other hand, is backed by much more powerful hardware, offering significantly better performance and reliability.
+<h3>Free Tier – Dell R720s</h3>
+
+<p><strong>Processors:</strong><br>
+  Dual Intel Xeon E5-2690<br>
+  Cores / Threads: 8 cores, 16 threads per CPU (Total: 16 cores, 32 threads)<br>
+  Base Clock Speed: 2.9 GHz<br>
+  Max Turbo Frequency: Up to 3.8 GHz
 </p>
 
-<p>Here’s a full breakdown of our infrastructure:</p>
-    </div>
+<p><strong>Memory:</strong></p>
+<ul>
+  <li>Total RAM: 196 GB DDR3 ECC Registered</li>
+  <li>RAM Speed: 2300 MHz</li>
+</ul>
+
+<p><strong>Storage:</strong></p>
+<ul>
+  <li>RAID 5 - SSD</li>
+</ul>
+
+<h3>Paid Tier – Custom High-Performance Nodes</h3>
+
+<p><strong>Processors:</strong><br>
+  AMD Ryzen 9 7950X<br>
+  Cores / Threads: 16 cores, 32 threads<br>
+  Base Clock Speed: 4.5 GHz<br>
+  Max Boost Clock: Up to 5.7 GHz
+</p>
+
+<p><strong>Memory:</strong></p>
+<ul>
+  <li>Total RAM: 128 GB DDR5 ECC</li>
+  <li>RAM Speed: 5600 MHz</li>
+</ul>
+
+<p><strong>Storage:</strong></p>
+<ul>
+  <li>Gen 4 NVMe SSDs – RAID 1 (mirrored for redundancy)</li>
+  <li>Ultra-fast read/write for low latency</li>
+</ul>
   </section>
 
   <!-- Footer -->
