--- a/index.html
+++ b/index.html
@@ -420,40 +420,40 @@
 
 <h3>Free Tier – Dell R720s</h3>
 
-<p><strong>Processors:</strong><br>
+<p><strong style="color:#9cdefc;">Processors:</strong><br>
   Dual Intel Xeon E5-2690<br>
   Cores / Threads: 8 cores, 16 threads per CPU (Total: 16 cores, 32 threads)<br>
   Base Clock Speed: 2.9 GHz<br>
   Max Turbo Frequency: Up to 3.8 GHz
 </p>
 
-<p><strong>Memory:</strong></p>
+<p><strong style="color:#9cdefc;">Memory:</strong><br>
 <ul>
   <li>Total RAM: 196 GB DDR3 ECC Registered</li>
   <li>RAM Speed: 2300 MHz</li>
 </ul>
 
-<p><strong>Storage:</strong></p>
+<p><strong style="color:#9cdefc;">Storage:</strong><br>
 <ul>
   <li>RAID 5 - SSD</li>
 </ul>
 
 <h3>Paid Tier – Custom High-Performance Nodes</h3>
 
-<p><strong>Processors:</strong><br>
+<p><strong style="color:#ffb380;">Processors:</strong><br>
   AMD Ryzen 9 7950X<br>
   Cores / Threads: 16 cores, 32 threads<br>
   Base Clock Speed: 4.5 GHz<br>
   Max Boost Clock: Up to 5.7 GHz
 </p>
 
-<p><strong>Memory:</strong></p>
+<p><strong style="color:#ffb380;">Memory:</strong><br>
 <ul>
   <li>Total RAM: 128 GB DDR5 ECC</li>
   <li>RAM Speed: 5600 MHz</li>
 </ul>
 
-<p><strong>Storage:</strong></p>
+<p><strong style="color:#ffb380;">Storage:</strong><br>
 <ul>
   <li>Gen 4 NVMe SSDs – RAID 1 (mirrored for redundancy)</li>
   <li>Ultra-fast read/write for low latency</li>
