--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@
     <div class="about-section">
       <div class="feature-icon">🎯</div>
       <h3>Our Mission</h3>
-      <p>At VoidedMC Hosting, our mission is to make high-performance Minecraft server hosting accessible to everyone—without cost or compromise.</p>
+      <p>At VoidedMC Hosting, our mission is to make high-performance Minecraft server hosting accessible to everyone without cost.</p>
     </div>
     <div class="about-section">
       <div class="feature-icon">🧑‍💻</div>
@@ -406,60 +406,76 @@
     <div class="about-section">
       <div class="feature-icon">⚙️</div>
       <h3>Our Hardware</h3>
-      <p>
-  We believe in being as open and honest as possible.<br><br>
+      <section>
+  <p>
+    We believe in being as open and honest as possible.
+  </p>
 
-  Unlike many hosting providers, we want you to know exactly what powers our services.<br><br>
+  <p>
+    Unlike many hosting providers, we want you to know exactly what powers our services.
+  </p>
 
-  Yes, we know — the free tier specifications are nothing to write home about. But they’re perfect for running lots of lightweight Minecraft servers.<br><br>
+  <p>
+    Yes, we know, the free tier specifications are nothing to write home about. But they’re perfect for running lots of lightweight Minecraft servers.
+  </p>
 
-  Our <strong>paid tier</strong>, on the other hand, is backed by much more powerful hardware, offering significantly better performance and reliability.<br><br>
+  <p>
+    Our <strong>paid tier</strong>, on the other hand, is backed by much more powerful hardware, offering significantly better performance and reliability.
+  </p>
 
-  Here’s a full breakdown of our infrastructure:
-</p>
+  <p>
+    Here’s a full breakdown of our infrastructure:
+  </p>
 
-<h3>Free Tier – Dell R720s</h3>
+  <h3>Free Tier – Dell R720s</h3>
 
-<p><strong style="color:#9cdefc;">Processors:</strong><br>
-  Dual Intel Xeon E5-2690<br>
-  Cores / Threads: 8 cores, 16 threads per CPU (Total: 16 cores, 32 threads)<br>
-  Base Clock Speed: 2.9 GHz<br>
-  Max Turbo Frequency: Up to 3.8 GHz
-</p>
+  <p><strong style="color:#9cdefc;">Processors:</strong></p>
+  <ul>
+    <li>Dual Intel Xeon E5-2690</li>
+    <li>8 cores / 16 threads per CPU (Total: 16 cores / 32 threads)</li>
+    <li>Base Clock Speed: 2.9 GHz</li>
+    <li>Max Turbo Frequency: Up to 3.8 GHz</li>
+  </ul>
 
-<p><strong style="color:#9cdefc;">Memory:</strong><br>
-<ul>
-  <li>Total RAM: 196 GB DDR3 ECC Registered</li>
-  <li>RAM Speed: 2300 MHz</li>
-</ul>
+  <p><strong style="color:#9cdefc;">Memory:</strong></p>
+  <ul>
+    <li>Total RAM: 196 GB DDR3 ECC Registered</li>
+    <li>RAM Speed: 2300 MHz</li>
+  </ul>
 
-<p><strong style="color:#9cdefc;">Storage:</strong><br>
-<ul>
-  <li>RAID 5 - SSD</li>
-</ul>
+  <p><strong style="color:#9cdefc;">Storage:</strong></p>
+  <ul>
+    <li>RAID 5 – SSD</li>
+  </ul>
 
-<h3>Paid Tier – Custom High-Performance Nodes</h3>
+  <ul> </ul>
+  <h3>Paid Tier – Custom High-Performance Nodes</h3>
 
-<p><strong style="color:#ffb380;">Processors:</strong><br>
-  AMD Ryzen 9 7950X<br>
-  Cores / Threads: 16 cores, 32 threads<br>
-  Base Clock Speed: 4.5 GHz<br>
-  Max Boost Clock: Up to 5.7 GHz
-</p>
+  <p><strong style="color:#ffb380;">Processors:</strong></p>
+  <ul>
+    <li>Intel i9-9900k</li>
+    <li>8 cores / 16 threads</li>
+    <li>Base Clock Speed: 3.1 GHz</li>
+    <li>Max Boost Clock: Up to 5.0 GHz</li>
+  </ul>
+ <ul>&</ul>
+ <ul>
+    <li>Intel W-1290P</li>
+    <li>10 cores / 20 threads</li>
+    <li>Base Clock Speed: 3.7 GHz</li>
+    <li>Max Boost Clock: Up to 5.3 GHz</li>
+  </ul> 
+  <p><strong style="color:#ffb380;">Memory:</strong></p>
+  <ul>
+    <li>Total RAM: 64 GB DDR4</li>
+    <li>RAM Speed: 3200 MHz</li>
+  </ul>
 
-<p><strong style="color:#ffb380;">Memory:</strong><br>
-<ul>
-  <li>Total RAM: 128 GB DDR5 ECC</li>
-  <li>RAM Speed: 5600 MHz</li>
-</ul>
-
-<p><strong style="color:#ffb380;">Storage:</strong><br>
-<ul>
-  <li>Gen 4 NVMe SSDs – RAID 1 (mirrored for redundancy)</li>
-  <li>Ultra-fast read/write for low latency</li>
-</ul>
-  </section>
-
+  <p><strong style="color:#ffb380;">Storage:</strong></p>
+  <ul>
+    <li>Gen 4 NVMe SSDs</li>
+  </ul>
+</section>
   <!-- Footer -->
   <footer>
     &copy; 2025 VoidedMC. All rights reserved.
