--- a/index.html
+++ b/index.html
@@ -427,8 +427,8 @@
     Here’s a full breakdown of our infrastructure:
   </p>
 
-  <h3>Free Tier – Dell R720s</h3>
-
+  <h3 style="margin-top: 40px;">Free Tier - Dell R720</h3>
+   
   <p><strong style="color:#9cdefc;">Processors:</strong></p>
   <ul>
     <li>Dual Intel Xeon E5-2690</li>
@@ -449,7 +449,7 @@
   </ul>
 
   <ul> </ul>
-  <h3>Paid Tier – Custom High-Performance Nodes</h3>
+  <h3 style="margin-top: 40px;">Paid Tier – Custom High-Performance Nodes</h3>
 
   <p><strong style="color:#ffb380;">Processors:</strong></p>
   <ul>
