--- a/index.html
+++ b/index.html
@@ -431,7 +431,7 @@
    
   <p><strong style="color:#9cdefc;">Processors:</strong></p>
   <ul>
-    <li>Dual Intel Xeon E5-2690</li>
+    <li>Dual Intel E5-2690</li>
     <li>8 cores / 16 threads per CPU (Total: 16 cores / 32 threads)</li>
     <li>Base Clock Speed: 2.9 GHz</li>
     <li>Max Turbo Frequency: Up to 3.8 GHz</li>
