--- a/index.html
+++ b/index.html
@@ -401,7 +401,9 @@
     <div class="about-section">
       <div class="feature-icon">🧑‍💻</div>
       <h3>Meet The Owner</h3>
-      <p>VoidedMC Hosting was founded by a passionate gamer and developer who saw a gap in the market for truly free hosting.</p>
+      <p>Hey there! I’m SimplyVoid. I started this hosting company because, like you, I wanted a better way for players to run their own servers without all the stress or crazy prices.
+        VoidedMC is all about giving everyone a chance to build, play, and create their own worlds, whether you're just starting out or running a big community</p>
+      <p>Thanks for checking us out! I can’t wait to see what you create!</p>
     </div>
     <div class="about-section">
       <div class="feature-icon">⚙️</div>
