--- a/index.html
+++ b/index.html
@@ -406,7 +406,7 @@
     </div>
     <div class="about-section">
       <div class="feature-icon">⚙️</div>
-      <h3>Our Hardware</h3>
+      <h3>For the Nerds!</h3>
       <section>
   <p>
     We believe in being as open and honest as possible.
