--- a/index.html
+++ b/index.html
@@ -365,12 +365,12 @@
         <div class="feature-card">
           <div class="feature-icon">📦</div>
           <h3>Free Plan:</h3>
-          <p>CPU: 3 vCores (shared) - RAM: 3GB - Storage: 10GB - Subusers - Bedrock & Java Support</p>
+          <p>CPU: 3 vCores (shared) - RAM: 3GB - Storage: 10GB - Bedrock & Java Support</p>
         </div>
         <div class="feature-card">
           <div class="feature-icon">📦</div>
           <h3>Premium Plan: (Coming Soon!)</h3>
-          <p>CPU: Unlimited vCores (shared) - RAM: 6GB+ - Storage: 25GB - Server Backups - Subusers - Bedrock & Java Support</p>
+          <p>CPU: Unlimited vCores (shared) - RAM: 6GB+ - Storage: 25GB - Subusers - Bedrock & Java Support</p>
         </div>
       </div>
     </div>
