--- a/index.html
+++ b/index.html
@@ -477,9 +477,10 @@
     <li>Gen 4 NVMe SSDs</li>
   </ul>
 </section>
-  <!-- Footer -->
+<!-- Footer -->
   <footer>
-    &copy; 2025 VoidedMC. All rights reserved.
+    &copy; 2025 VoidedMC. All rights reserved.<br>
+    <a href="/terms.html">Terms of Service</a>
   </footer>
 
   <!-- Scripts -->
