--- a/index.html
+++ b/index.html
@@ -478,11 +478,20 @@
   </ul>
 </section>
 <!-- Footer -->
-  <footer>
-    &copy; 2025 VoidedMC. All rights reserved.<br>
-    <a href="/terms.html">Terms of Service</a>
-  </footer>
+<style>
+  footer a {
+    color: white;
+    text-decoration: none;
+  }
 
+  footer a:hover {
+    text-decoration: underline;
+  }
+</style>
+<footer>
+  &copy; 2025 VoidedMC. All rights reserved.<br>
+  <a href="/terms.html">Terms of Service</a>
+</footer>
   <!-- Scripts -->
   <script>
     const observer = new IntersectionObserver((entries) => {
