--- a/plans.html
+++ b/plans.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Select Your Plan - VoidedHosting</title>
+  <title>Select Your Plan - VoidedMC</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
   <style>
     :root {
@@ -125,45 +125,33 @@
 
     <section class="plans">
       <div class="plan">
-        <h2>Grass Plan</h2>
+        <h2>Free Tier</h2>
         <p class="price">Free</p>
         <ul class="features">
-          <li>1 GB RAM</li>
-          <li>1 vCPU</li>
-          <li>10 GB SSD</li>
+          <li>3 GB RAM</li>
+          <li>3 vCPU</li>
+          <li>15 GB SSD</li>
           <li>Basic Support</li>
         </ul>
         <a href="https://adminconsole.voidedmc.net/auth/register"><button class="select-button">Get Started</button></a>
       </div>
 
       <div class="plan">
-        <h2>Stone Plan</h2>
+        <h2>Paid Tier</h2>
         <p class="price">$5 / month</p>
         <ul class="features">
-          <li>4 GB RAM</li>
-          <li>2 vCPU</li>
-          <li>50 GB SSD</li>
-          <li>Priority Queue</li>
+          <li>4 GB RAM (expandable upon request)</li>
+          <li>4 vCPU (expandable upon request)</li>
+          <li>30 GB SSD</li>
+          <li>Basic Support</li>
         </ul>
         <button class="select-button">Upgrade</button>
-      </div>
-
-      <div class="plan">
-        <h2>Diamond Plan</h2>
-        <p class="price">$10 / month</p>
-        <ul class="features">
-          <li>8 GB RAM</li>
-          <li>4 vCPU</li>
-          <li>100 GB SSD</li>
-          <li>Dedicated Support</li>
-        </ul>
-        <button class="select-button">Go Pro</button>
       </div>
     </section>
   </main>
 
   <footer>
-    &copy; 2025 VoidedHosting. All rights reserved.
+    &copy; 2025 VoidedMC. All rights reserved.
   </footer>
 </body>
 </html>
