--- a/plans.html
+++ b/plans.html
@@ -161,7 +161,7 @@
           <li>15 GB SSD</li>
           <li>Basic Support</li>
         </ul>
-        <a href="https://adminconsole.voidedmc.net/auth/register">
+        <a href="nothing">
           <button class="select-button">Get Started</button>
         </a>
       </div>
