--- a/index.html
+++ b/index.html
@@ -514,7 +514,16 @@
     const navLinks = document.getElementById('nav-links');
     navToggle.addEventListener('click', () => {
       navLinks.classList.toggle('show');
-    });
+    });<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3581720027198766"
+     crossorigin="anonymous"></script>
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-format="autorelaxed"
+     data-ad-client="ca-pub-3581720027198766"
+     data-ad-slot="8305968992"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
   </script>
 
 </body>
