--- a/index.html
+++ b/index.html
@@ -382,9 +382,7 @@
 
   <!-- Hero Section -->
   <header>
-    <video autoplay loop muted>
-      <source src="MCShaders.mp4" type="video/mp4" />
-    </video>
+    <img src="serverimage.png" alt="Background" class="header-bg" />
     <div class="header-flex-container">
       <div class="header-left">
         <h1>VoidedMC Hosting</h1>
