--- a/index.html
+++ b/index.html
@@ -351,6 +351,16 @@
       .header-right {
         margin-top: 2rem;
       }
+    header img.header-bg {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  z-index: -1;
+}
     }
   </style>
 </head>
@@ -367,7 +377,6 @@
       <div class="navbar-server" onclick="copyToClipboard('Play.Voidedmc.net')">
         Official MC Server: Play.Voidedmc.net
       </div>
-
       <div class="navbar-links" id="nav-links">
         <a href="#home">Home</a>
         <a href="#about">About Us</a>
@@ -390,6 +399,7 @@
         <p>We're not lying... Boot your FREE Minecraft server in a matter of minutes! No catch, no credit card.</p>
         <a href="plans.html" class="cta-button">Get Started Now</a>
       </div>
+         
   </header>
 
   <!-- Features Section -->
