--- a/index.html
+++ b/index.html
@@ -146,15 +146,8 @@
       overflow: hidden;
     }
 
-    header::before {
-      content: "";
-      position: absolute;
-      inset: 0;
-      background: transparent; /* Remove the dark overlay */
-      z-index: 0;
-    }
-
-    header video {
+    /* Background image for header */
+    header img.header-bg {
       position: absolute;
       top: 50%;
       left: 50%;
@@ -351,16 +344,6 @@
       .header-right {
         margin-top: 2rem;
       }
-    header img.header-bg {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  z-index: -1;
-}
     }
   </style>
 </head>
@@ -377,6 +360,7 @@
       <div class="navbar-server" onclick="copyToClipboard('Play.Voidedmc.net')">
         Official MC Server: Play.Voidedmc.net
       </div>
+
       <div class="navbar-links" id="nav-links">
         <a href="#home">Home</a>
         <a href="#about">About Us</a>
@@ -389,9 +373,9 @@
   <!-- ✅ Scroll target for Home -->
   <div id="home"></div>
 
-  <!-- Hero Section -->
+  <!-- Hero Section with Background Image -->
   <header>
-    <img src="serverimage.png" alt="Background" class="header-bg" />
+    <img src="your-image.jpg" alt="Background" class="header-bg" />
     <div class="header-flex-container">
       <div class="header-left">
         <h1>VoidedMC Hosting</h1>
@@ -399,7 +383,7 @@
         <p>We're not lying... Boot your FREE Minecraft server in a matter of minutes! No catch, no credit card.</p>
         <a href="plans.html" class="cta-button">Get Started Now</a>
       </div>
-         
+    </div>
   </header>
 
   <!-- Features Section -->
