--- a/plans.html
+++ b/plans.html
@@ -20,7 +20,7 @@
       margin: 0;
       font-family: 'Inter', sans-serif;
       color: var(--text);
-      background: url('https://i.redd.it/hey-i-just-realised-that-minecraft-dropped-wallpapers-for-v0-af632nce2dud1.jpg?width=3840&format=pjpg&auto=webp&s=102770acfd3d1534ba97f09cfcaab822e6485b9e') no-repeat center center fixed;
+      background: video('MCShaders.mp4')no-repeat center center fixed;
       background-size: cover;
       display: flex;
       flex-direction: column;
